# OpenLoom

./: .clang-format  .clinerules  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/Common/: BoundingBox2D.cpp  BoundingBox2D.h  BoundingBox3D.cpp  BoundingBox3D.h  CMakeLists.txt  DebugFlags.h  Logging.h  MathConstants.h  MathConverter.cpp  MathConverter.h  TwinManager.cpp  TwinManager.h  Types.h
src/Common/Exceptions/: CMakeLists.txt  Exception.h  GeometryException.h  MeshException.h  TopologyException.h
src/Data/: CMakeLists.txt
src/Examples/: BoxWithHole.cc  CMakeLists.txt  ConstrainedBoxExample.cc  CreateBox.cc  RectangleWithCrack.cc  RectangleWithHole2D.cc  SimpleDelaunay2D.cc  SquareWithCircularHole.cc  export_example.h
src/Examples/2D/: CMakeLists.txt  FullyPeriodicSquare.cc  ManyCirclesInSquare.cc  MeshStepFile2D.cc  NearCoincidentConstraintEdges.cc  NestedConcentricRings.cc  RectangleWithCrack.cc  RectangleWithHole2D.cc  SimpleDelaunay2D.cc  SpiralChannel.cc  SquareWithCircleAndTwinEdges.cc  SquareWithCircularHole.cc  SquareWithInternalCircles.cc  StarPolygon.cc  ThinSliverDomain.cc
src/Examples/2D/STEP/: RectangleWithHole.step  sh.step
src/Examples/3D/: CMakeLists.txt
src/Examples2D/: CMakeLists.txt  RectangleWithCrack.cc  RectangleWithHole2D.cc  SquareWithCircleAndTwinEdges.cc  SquareWithCircularHole.cc
src/Examples2D/STEP/: C.step  OpenLoom.step  s.step
src/Examples3D/: 3d_mesh_with_holes_example.cpp  BoxWithHole.cc  CMakeLists.txt  CreateBox.cc  CylinderSurfaceMesh.cc  README_3D.md  ShewchukBox.cc  ShewchukBoxWithHole.cc  SurfaceMeshEdges.cc  basic_3d_constraint_example.cpp  export_example.h
src/Export/: CMakeLists.txt  IExporter.h  VtkExporter.cpp  VtkExporter.h
src/Geometry/: CMakeLists.txt
src/Geometry/Base/: CMakeLists.txt  Corner.h  Corner3D.h  Edge.h  Edge3D.h  GeometryCollection.cpp  GeometryCollection.h  GeometryCollection3D.cpp  GeometryCollection3D.h  GeometryManager.cpp  GeometryManager.h  ICorner3D.h  Surface.h  Surface3D.h
src/Geometry/OpenCascade/: CMakeLists.txt  OpenCascadeCorner.cpp  OpenCascadeCorner.h  OpenCascadeEdge.cpp  OpenCascadeEdge.h  OpenCascadeSurface.cpp  OpenCascadeSurface.h
src/Geometry2D/: CMakeLists.txt  Corner2D.h  DiscretizationSettings2D.h  Edge2D.cpp  Edge2D.h  GeometryCollection2D.cpp  GeometryCollection2D.h  GeometryOperations2D.cpp  GeometryOperations2D.h  IEdge2D.h  LinearEdge2D.h
src/Meshing/: CMakeLists.txt
src/Meshing/Connectivity/: FaceKey.h
src/Meshing/Core/: CMakeLists.txt  Computer.cpp  Computer.h  Computer2D.cpp  Computer2D.h  ComputerGeneral.h  ConstrainedDelaunay2D.cpp  ConstrainedDelaunay2D.h  ConstrainedDelaunay3D.cpp  ConstrainedDelaunay3D.h  ConstrainedDelaunayHelper.cpp  ConstrainedDelaunayHelper.h  ConstrainedMesher.cpp  ConstrainedMesher.h  ConstraintStructures.h  DIRECTORY_OVERVIEW.md  Delaunay3D.cpp  Delaunay3D.h  ElementGeometry.cpp  ElementGeometry.h  IMesher.h  IQualityController.h  MeshOperations2D.cpp  MeshOperations2D.h  MeshingContext.cpp  MeshingContext.h  MeshingContext2D.cpp  MeshingContext2D.h  MeshingContext3D.cpp  MeshingContext3D.h  SimpleMesher.cpp  SimpleMesher.h
src/Meshing/Data/: CMakeLists.txt  Computer.cpp  Computer.h  ConstraintRole.h  CurveSegmentManager.cpp  CurveSegmentManager.h  Element.h  ElementGeometry.cpp  IElement.h  MeshConnectivity.cpp  MeshConnectivity.h  MeshData.cpp  MeshData.h  MeshData2D.cpp  MeshData2D.h  MeshData3D.cpp  MeshData3D.h  MeshGeometry.cpp  MeshGeometry.h  MeshMutator2D.cpp  MeshMutator2D.h  MeshMutator3D.cpp  MeshMutator3D.h  MeshOperations.cpp  MeshOperations.h  MeshOperations2D.cpp  MeshOperations2D.h  MeshOperations3D.cpp  MeshOperations3D.h  Node.cpp  Node.h  Node2D.cpp  TetrahedralElement.cpp  TetrahedralElement.h  TriangleElement.cpp  TriangleElement.h
src/Meshing/Interfaces/: IMesher.h  IQualityController2D.h  IQualityController3D.h
src/Meshing/Operations/: CMakeLists.txt  ITransactionListener.h  MeshTransaction.cpp  MeshTransaction.h  ScopedTransaction.cpp  ScopedTransaction.h
src/Readers/: CMakeLists.txt
src/Readers/OpenCascade/: CMakeLists.txt  OpenCascadeGeometryCollection.cpp  OpenCascadeGeometryCollection.h  StepReader2D.cpp  StepReader2D.h  TopoDS_ShapeConverter.cc  TopoDS_ShapeConverter.h
src/Readers/ShapeConverter/: CMakeLists.txt
src/Topology/: CMakeLists.txt  Corner.cpp  Corner.h  Corner3D.cpp  Corner3D.h  Edge.cpp  Edge.h  Edge3D.cpp  Edge3D.h  SeamCollection.cpp  SeamCollection.h  Surface.cpp  Surface.h  Surface3D.cpp  Surface3D.h  Topology.cpp  Topology.h  Topology3D.cpp  Topology3D.h
src/Topology2D/: CMakeLists.txt  Corner2D.cpp  Corner2D.h  Edge2D.cpp  Edge2D.h  Topology2D.cpp  Topology2D.h
src/Utils/: CMakeLists.txt  MeshLogger.cpp  MeshLogger.h
tests/: CMakeLists.txt  test_main.cpp
tests/Common/Exceptions/: test_Exception.cpp
tests/Geometry/: test_Corner.cpp  test_Edge.cpp  test_Surface.cpp
tests/Integration/: test_GeometryToMesh.cpp  test_MeshWorkflow.cpp  test_SimpleMesher.cpp  test_VtkExporter.cpp
tests/Meshing/Core/: test_BoundaryDiscretizer3D.cpp  test_Computer2D.cpp  test_ConstrainedDelaunay2D.cpp  test_ConstrainedDelaunay3D.cpp  test_ConstraintChecker2D.cpp  test_ConstraintChecker3D.cpp  test_CurveSegmentManager.cpp  test_Delaunay3D.cpp  test_ElementGeometry2D.cpp  test_ElementGeometry3D.cpp  test_ElementQuality2D.cpp  test_ElementQuality3D.cpp  test_FacetDiscretization2DBuilder.cpp  test_FacetTriangulation.cpp  test_FacetTriangulationManager.cpp  test_GeometryUtilities2D.cpp  test_GeometryUtilities3D.cpp  test_MeshOperations3D.cpp  test_RCDTContext.cpp  test_RCDTMesher.cpp  test_RestrictedTriangulation.cpp  test_Shewchuk2DQualityController.cpp  test_ShewchukRefiner2D.cpp  test_ShewchukRefiner3D.cpp  test_SurfaceMesh3D.cpp  test_SurfaceProjector.cpp  test_TwinManager.cpp  test_TwinTableGenerator.cpp
tests/Meshing/Data/: test_Node.cpp  test_TetrahedralElement.cpp  test_TriangularElement.cpp
tests/Meshing/Operations/: test_MeshGeneration.cpp  test_MeshTransaction.cpp
tests/Topology/: test_Corner.cpp  test_Edge.cpp  test_Surface.cpp
(+260 files in other folders)
